<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.setting.SettingFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:src="@drawable/home_page_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAiVoices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="2"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal|top"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintStart_toEndOf="@+id/imgBackArrow"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/tvPremium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/premium"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/tvShareApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/tvRateUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/rate_us"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/contact_us"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/terms_of_service"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/privacypolicy"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>