<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.fragment.HomeSelectFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:src="@drawable/material_symbols_arrow_back_ios_new_rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAiVoices"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="center_horizontal|top"
            android:text="@string/ai_voice"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/imgBackArrow"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_240sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/_2sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/message"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etWriteYourPrompts"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:background="@drawable/home_page_two_edittext_border"
            android:ems="10"
            android:textCursorDrawable ="@color/black"
            android:gravity="top"
            android:padding="10dp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:hint="@string/meesagetwo"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

        <TextView
            android:id="@+id/tvMaxCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/max_character"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etWriteYourPrompts" />

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_160sdp"
            android:layout_marginTop="13dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/number"
            app:layout_constraintStart_toEndOf="@+id/tvMaxCharacter"
            app:layout_constraintTop_toBottomOf="@+id/etWriteYourPrompts" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <TextView
            android:id="@+id/tvSelectAiVoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/select_ai_voice"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSeeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/see_all"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/tvSelectAiVoice"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGenarate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/onboarding_fragment_button"
        android:fontFamily="sans-serif-thin"
        android:text="@string/generate"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview" />

</androidx.constraintlayout.widget.ConstraintLayout>