<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_marginTop="@dimen/_10sdp"
    android:paddingTop="25dp"
    android:layout_marginStart="@dimen/_23sdp"
    android:layout_marginEnd="@dimen/_25sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/cardview_background"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/personImageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/custom_playing_image_background"
            android:clipToOutline="true"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/personImage"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_85sdp"
                android:layout_marginStart="10dp"
                android:src="@drawable/img_obama"
                android:elevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvUuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/uuid"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/personImageLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGeneration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/generation"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/tvUuid"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/name"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/personImageLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvUuid" />

        <TextView
            android:id="@+id/tvUserInputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="10dp"
            android:text="@string/user_input_text"
            android:ellipsize="end"
            android:maxLines="3"
            app:layout_constraintStart_toEndOf="@+id/personImageLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>